test/invalid/missing_return.qt
function main() -> int {
    int x = 5;
    
}